# kassa

./: CMakeLists.txt
dbmanager/: CMakeLists.txt
dbmanager/inc/: dbmanager.h  dbtypes.h
dbmanager/src/: dbmanager.cpp
inc/: dbsettings.h  flight.h  mainwindow.h
src/: dbsettings.cpp  flight.cpp  main.cpp  mainwindow.cpp
ui/: dbsettings.ui  flight.ui  mainwindow.ui
